statusapi/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-api
spec:
  selector:
    matchLabels:
      app: status-api
  template:
    metadata:
      labels:
        app: status-api
    spec:
      containers:
      - name: status-api
        image: danieljin/status-api-nov-2011:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
