statusapi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: status-api-service
spec:
  selector:
    app: status-api
  ports:
  - port: 80
    targetPort: 80
